--- a/examples/katex.html
+++ b/examples/katex.html
@@ -2,19 +2,17 @@
 <html lang="zh">
     <head>
         <meta charset="utf-8" />
-        <title>Tex 科学公式语言 (TeX/LaTeX) - Editor.md examples</title>
+        <title>Tex 科学公式语言 (TeX/LaTeX) - Editor.md</title>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="../css/editormd.css" />
-        <link rel="shortcut icon" href="https://pandao.github.io/editor.md/favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="https://www.mrxiaom.top/favicon.ico" type="image/x-icon" />
     </head>
     <body>
         <div id="layout">
             <header>
                 <h1>Tex 科学公式语言 (TeX/LaTeX)</h1>
-				<p>Based on KaTeX.js：<a href="http://khan.github.io/KaTeX/" target="_blank">http://khan.github.io/KaTeX/</a></p>
-                <p>P.S. Default using CloudFlare KaTeX's CDN. (注：默认使用 CloudFlare 的 CDN，有时加载速度会比较慢，可自定义加载地址。)</p>
-                <br/>
-                <p><a href="https://jsperf.com/katex-vs-mathjax" target="_blank">KaTeX vs MathJax</a></p>   
+		<p>Based on KaTeX.js：<a href="http://khan.github.io/KaTeX/" target="_blank">http://khan.github.io/KaTeX/</a></p>
+                <p>注：使用 CloudFlare 的 CDN，有时加载速度会比较慢</p>
             </header>
             <div id="test-editormd">                
                 <textarea style="display:none;">
