--- a/examples/katex.html
+++ b/examples/katex.html
@@ -24,6 +24,16 @@ T = \frac{3}{2} M
 ```
 在 math 块里面输入公式，在外面输入文字
 
+也可以用两个 `$$` 符号包围公式以使用内联格式
+
+$$ \text{Max } T = \frac{3}{2} M $$
+
+在 `$` 开头加空格可防止挤在同一行
+
+ $$ \quad B \geq \frac{M}{50} $$
+ $$ \quad S_1 + S_2 + S_3 + S_4 + S_5 + S_6 \leq 112 $$
+ $$ \quad M \geq 1000 $$
+		
 </textarea>
             </div>
         </div>
